--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;AttachDbFilename=C:\\Avital\\AvitalERP.mdf;Database=AvitalERP;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "SeedAdmin": {
+    "Email": "abraham@avital.mx",
+    "Password": "Avital!23456"
+  },
   "AllowedHosts": "*"
 }
+
